# music-lib

./: .dockerignore  .gitignore  API.md  Dockerfile  README.md  biome.json  build.ts  docker-compose.yml  index.html  music-db.json  package.json
_tmp/: AddTrackModalX.tsx
cli_player/: .gitignore  Cargo.toml  Justfile  README.md
cli_player/src/: app.rs  audio.rs  main.rs  ui.rs
client/: biome.json  index.html  package.json
client/src/: App.tsx
client/src/components/: AddTrackForm.tsx  FloatingAddButton.tsx  Player.tsx  TrackList.tsx
client/src/contexts/: PlayerContext.tsx
client/src/lib/: utils.ts
server/: .gitignore  Cargo.toml  Justfile
server/src/: main.rs
src/: App.tsx  index.css  index.html  index.tsx
src/components/: BottomPlayer.tsx  FloatingAddButton.tsx  MusicPlayer.tsx  TrackList.tsx
src/contexts/: PlayerContext.tsx
