[package]
name = "cli_player"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
rodio = "0.22"
clap = { version = "4.4", features = ["derive"] }
rand = "0.10"
m2ts-packet = "0.0.1"
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
tokio-stream = "0.1.18"
